fixed date wrap alignment on trial cards

--- a/clintwin/sponsor/static/sponsor/css/card.css
+++ b/clintwin/sponsor/static/sponsor/css/card.css
@@ -54,6 +54,7 @@
   position:absolute;
   bottom: 0;
   right: 1rem;
+  float: left;
   /* left: 0; */
 }
 
